Solve issue of footer not stretching correctly

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -9,6 +9,7 @@ footer {
     padding: 0.5em;
     margin: 0em;
     box-shadow: 0em 1em 2em black;
+    flex-shrink: 0;
 }
 
 footer p {
