--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -12,19 +12,14 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
-    min-height: 100%;
+    min-height: 100vh;
     box-sizing: border-box;
     overflow-y: auto;
     overflow-x: scroll;
 }
 
-.content {
-    flex: 1 0 auto;
+main {
+    flex: 1;
     padding: 1em;
-    box-sizing: border-box;
-}
-
-footer {
-    flex-shrink: 0;
     box-sizing: border-box;
 }
